# project_template

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  TODO  compile_commands.json
.github/workflows/: compile_nuttx.yml
.github/workflows/ISSUE_TEMPLATE/: 1_Feature_request.md
Docs/doxygen/doxygen_templates/: C source template_Rev_2_5.c  overview.txt
Documentation/doxygen/: Doxyfile.in
Documentation/git/: git_branching_model.html
Documentation/git/git_branching_model_files/: CKYIK23M.js  css.css
Documentation/uml/ModuleBase/: module_base_seq.puml
ROMFS/: CMakeLists.txt
ROMFS/fmu_common/: CMakeLists.txt
ROMFS/fmu_common/init.d/: CMakeLists.txt  rcS
Tools/setup/: ubuntu.sh
Tools/uorb_graph/: create.py
boards/host/posix/: test.cmake
boards/host/posix/src/: CMakeLists.txt  board_config.h  board_shutdown.cpp
boards/px4/fmu-v5/: default.cmake
boards/px4/fmu-v5/src/: CMakeLists.txt
boards/stm/nucleo_h743zi/: default.cmake  netnsh.cmake
boards/stm/nucleo_h743zi/init/: rc.board_defaults
boards/stm/nucleo_h743zi/nuttx-config/include/: board.h
boards/stm/nucleo_h743zi/nuttx-config/netnsh/: defconfig
boards/stm/nucleo_h743zi/nuttx-config/nsh/: defconfig
boards/stm/nucleo_h743zi/nuttx-config/scripts/: script.ld
boards/stm/nucleo_h743zi/src/: CMakeLists.txt  nucleo-h743zi.h  nucleo-h743zi_pinout.txt  pinout_scheme.txt  stm32_appinitialize.c  stm32_autoleds.c  stm32_bluefruit.c  stm32_bringup.c  stm32_mmcsd.c  stm32_spi.c  stm32_userleds.c
cmake/: add_board.cmake  add_common_flags.cmake  add_config.cmake  add_custom_library.cmake  add_git_submodule.cmake  add_library.cmake  add_module.cmake  parse_function_args.cmake
cmake/doxygen/: CMakeLists.txt.in  doxygen.cmake
cmake/gtest/: CMakeLists.txt.in  add_gtest.cmake  gtest.cmake
cmake/nuttx/: CMakeLists.txt.in  nuttx.cmake
configuration/: default.cmake
docs/: index.md
msg/: CMakeLists.txt  aa_tito_prueba.msg  aa_tito_prueba2.msg  hello.msg
msg/templates/uorb_basic/: msg.cpp.em  msg.h.em
msg/tools/: px_generate_uorb_topic_helper.py
src/drivers/: drv_hrt.h  drv_orb_dev.h
src/include/: visibility.h
src/include/containers/: IntrusiveSortedList.hpp  List.hpp
src/lib/: CMakeLists.txt
src/lib/cdev/: CDev.cpp  CDev.hpp  CMakeLists.txt
src/lib/cdev/nuttx/: cdev_platform.cpp  cdev_platform.hpp
src/lib/do_nothing_example/: do_nothing_example.cpp  do_nothing_example.h
src/lib/parameters/: CMakeLists.txt  param.h  param_translation.cpp  parameters.cpp  px_generate_params.py  px_process_params.py
src/lib/parameters/flashparams/: flashfs.c  flashparams.cpp
src/lib/parameters/templates/: parameters.c.jinja  parameters.h.jinja  parameters_public.h.jinja
src/lib/parameters/tinybson/: tinybson.cpp
src/lib/perf/: CMakeLists.txt  perf_counter.cpp  perf_counter.h
src/lib/version/: CMakeLists.txt  px_update_git_header.py  version.c  version.h
src/libraries/do_nothing_example/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/blue_daemon/: CMakeLists.txt  blue_daemon.cpp  blue_daemon.h
src/modules/hello/: CMakeLists.txt  hello.cpp  hello.hpp
src/modules/hello_pub/: CMakeLists.txt  hello_pub.cpp  hello_pub.h  hello_pub_params.c
src/modules/hello_sub/: CMakeLists.txt  hello_sub.cpp  hello_sub.hpp
src/modules/module_develop/: CMakeLists.txt  MW_uORB_Write.cpp  MW_uORB_Write.h  MW_uORB_busstruct_conversion.h  ert_main.cpp  ert_main.h  matlab_module.cpp  matlab_module.h  matlab_module.slx  matlab_module.slx.autosave  matlab_module.slx.original  matlab_module.slxc  matlab_module_data.cpp  matlab_module_private.h  matlab_module_types.h  multiword_types.h  rtwtypes.h
src/modules/pubsub_monotask/: CMakeLists.txt  MW_uORB_busstruct_conversion.h  ert_main.cpp  ert_main.h  pubsub_monotask.cpp  pubsub_monotask.h  pubsub_monotask_private.h  pubsub_monotask_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_main.cpp  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
src/modules/pubsub_multitask/: CMakeLists.txt  MW_uORB_Read.cpp  MW_uORB_Write.cpp  MW_uORB_busstruct_conversion.h  pubsub_multitask.cpp  pubsub_multitask.h  pubsub_multitask_private.h  pubsub_multitask_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_main.cpp  rt_main.h  rt_nonfinite.cpp  rt_nonfinite.h  rtmodel.h  rtwtypes.h
src/modules/simulink_models/pil/: Subsystem.slx.autosave  controller.slx  myDataFile.xml  pil_main.slx  pil_main.slx.original  plant.slx
src/modules/simulink_models/pil/Subsystem_ert_rtw/: Subsystem.rtw
src/modules/simulink_models/pil/Subsystem_nuttx/: CMakeLists.txt  MW_uORB_busstruct_conversion.h  Subsystem.cpp  Subsystem.h  Subsystem_private.h  Subsystem_types.h  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  ert_main.cpp  ert_main.h  modelsources.txt  rtmodel.h  rtw_proj.tmw  rtwtypes.h  rtwtypeschksum.mat
src/modules/simulink_models/pubsub_monotask/: pubsub_monotask.slx
src/modules/simulink_models/pubsub_multitask/: pubsub_multitask.slx  pubsub_multitask.slx.autosave  pubsub_multitask.slxc
src/modules/simulink_models/pubsub_multitask/pubsub_multitask_nuttx/: CMakeLists.txt  buildInfo.mat  build_exception.mat  codeInfo.mat  codedescriptor.dmr  defines.txt  modelsources.txt  pubsub_multitask.h  (+15 more)
src/modules/template_module/: CMakeLists.txt  template_module.cpp  template_module.h
src/modules/uORB/: CMakeLists.txt  ORBSet.hpp  Publication.hpp  PublicationMulti.hpp  Subscription.cpp  Subscription.hpp  SubscriptionBlocking.hpp  SubscriptionCallback.hpp  SubscriptionInterval.hpp  SubscriptionMultiArray.hpp  uORB.cpp  uORB.h  uORBCommon.hpp  uORBDeviceMaster.cpp  uORBDeviceMaster.hpp  uORBDeviceNode.cpp  uORBDeviceNode.hpp  uORBMain.cpp  uORBManager.cpp  uORBManager.hpp  uORBTopics.cpp  uORBTopics.h  uORBUtils.cpp
src/modules/uORB/include/: Limits.hpp  atomic.h  atomic_bitset.h  sem.hpp
src/modules/uORB/topics/: nico.h  orb_test.h  uORBTopics.hpp
src/systemcmds/param/: CMakeLists.txt  param.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  SampleTest.cpp  cmake_install.cmake
(+27 files in other folders)
